# bfgp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  compile_commands.json  entt_test.cpp.backup  git-first-push.sh  scheduler_demo
.cache/clangd/index/: EnttEventExample.cpp.0F5A900F954E646A.idx  EnttEventExample.cpp.F81ED32250FC614B.idx  EnttEventExample.h.9391F9E32A49FEC3.idx  GameEvents.h.49F299A9B3E8477E.idx  GameEvents.h.4F56CBD167E86704.idx  GameManager.cpp.8D1BC81483346187.idx  GameManager.h.ED2DD9FC354E0F97.idx  Player.cpp.17DCCBD17220C23F.idx  Player.h.AAD0423BFDAE38E5.idx  Scheduler.h.08EAD56FC28BE3AA.idx  Scheduler.h.1DF3A20C8A678EE1.idx  SchedulerExample.cpp.677080A93DE99201.idx  SchedulerExample.cpp.7AA6FF66A3B59A8F.idx  SchedulerExample.h.7EDFFA960AF000F8.idx  SchedulerUtils.h.033D539A216CE236.idx  SchedulerUtils.h.DA94A1AF390DD79E.idx  Tile.cpp.9D7500A310BFAA84.idx  Tile.h.D09D06EC8CB366AE.idx  TimedEventScheduler.h.0F4A1FE6C921E550.idx  TimedEventScheduler.h.8FA3EAAA3950EDA1.idx  TmxColor.cpp.935E77B6754E09FE.idx  TmxColor.h.EE8D3294B26D2FAB.idx  TmxEllipse.cpp.B597B3B6B05EA7E9.idx  TmxEllipse.h.AFFA8AE46A3B9D28.idx  TmxGroupLayer.cpp.C4E1F2602E460436.idx  TmxGroupLayer.h.4342946B339A61F1.idx  TmxImage.cpp.12B2206D597561E2.idx  TmxImage.h.F82644BF652F8241.idx  TmxImageLayer.cpp.A38879A246BC0F79.idx  TmxImageLayer.h.37D450F622BB77A6.idx  TmxLayer.cpp.60A897657640B890.idx  TmxLayer.h.25200BCF4F488AE1.idx  TmxMap.cpp.424876F65D4ABBBE.idx  TmxMap.h.1AA552B23943CC0A.idx  TmxMapLoader.cpp.9BE1BC9E94E17358.idx  TmxMapLoader.h.E16957B4380B8A44.idx  TmxMapLoader.h.F03EDCDA3FD4F885.idx  TmxMapTile.h.F9D16BF541536DA1.idx  TmxObject.cpp.369145EAFA19845D.idx  TmxObject.h.08B0A386180F01E8.idx  (+108 more)
assets/: asciimap.tmx  newtest.tmx  spritesheet.tsx  temp.tmx  tiny_galaxy_fx.tsx  tiny_galaxy_world.tsx
assets/maps/: newtest.tmx  tiny_galaxy_cloud.tsx  tiny_galaxy_space.tsx  tiny_galaxy_world.tsx
assets/tilesets/: imgui.ini  tiny_galaxy_monsters.tsx
docs/: NAMESPACES.md
examples/: CollisionTest.cpp  CollisionTest.hpp  DungeonExample.hpp  EnttEventExample.cpp  SchedulerExample.cpp  SchedulerExample.h
examples/mains/: collision_test_main.cpp  dungeon_example_main.cpp  entt_event_example_main.cpp  scheduler_example_main.cpp
include/: EventBus.h  GameEvent.h  GameManager.h  Player.h
include/core/: CollisionSystem.h  Components.h  Constants.h  DungeonGenerator.hpp  EntityFactory.hpp  EnttEventExample.h  GameManager.h  GraphicsContext.hpp  Mob.h  Player.h  SchedulerExample.h  Tags.h  Tile.h  TmxMapLoader.h  WanderSystem.hpp  walkerdungeon.hpp
include/core/services/: RendererService.hpp
include/events/: GameEvents.h
include/examples/: CollisionTest.hpp
include/input/: InputHandler.hpp
include/rendering/: Renderer.hpp
include/scheduler/: Scheduler.h
include/ui/: DebugWindow.hpp  EntityInspectorWindow.hpp  PerformanceWindow.hpp  TmxLoaderWindow.hpp  WalkerDungeonWindow.hpp
src/: GameManager.cpp  Mob.cpp  Player.cpp  Tile.cpp  TmxMapLoader.cpp  WanderSystem.cpp  main.cpp  walkerdungeon.cpp
src/core/: EntityFactory.cpp  GraphicsContext.cpp  WalkerDungeonGenerator.cpp  WanderSystem.cpp
src/input/: InputHandler.cpp
src/rendering/: Renderer.cpp
src/ui/: EntityInspectorWindow.cpp  PerformanceWindow.cpp  TmxLoaderWindow.cpp  WalkerDungeonWindow.cpp
